boxddd-sys/third-party/box3d/include/box3d/box3d.h


B3_API void b3World_Explode( b3WorldId worldId, const b3ExplosionDef* explosionDef );
B3_API void b3Body_SetMassData( b3BodyId bodyId, b3MassData massData );
B3_API void b3Body_ApplyMassFromShapes( b3BodyId bodyId );