boxddd-sys/third-party/box3d/include/box3d/types.h


typedef void* b3EnqueueTaskCallback( b3TaskCallback* task, void* taskContext, void* userContext, const char* taskName );
typedef void b3FinishTaskCallback( void* userTask, void* userContext );
typedef void* b3CreateDebugShapeCallback( const b3DebugShape* debugShape, void* userContext );
typedef void b3DestroyDebugShapeCallback( void* userShape, void* userContext );
typedef float b3FrictionCallback( float frictionA, uint64_t userMaterialIdA, float frictionB, uint64_t userMaterialIdB );
typedef float b3RestitutionCallback( float restitutionA, uint64_t userMaterialIdA, float restitutionB, uint64_t userMaterialIdB );
typedef struct b3Capacity
{
	int staticShapeCount;
	int dynamicShapeCount;
	int staticBodyCount;
	int dynamicBodyCount;
	int contactCount;
} b3Capacity;
typedef struct b3WorldDef
{
	b3Vec3 gravity;
	float restitutionThreshold;
	float hitEventThreshold;
	float contactHertz;
	float contactDampingRatio;
	float contactSpeed;
	float maximumLinearSpeed;
	b3FrictionCallback* frictionCallback;
	b3RestitutionCallback* restitutionCallback;
	bool enableSleep;
	bool enableContinuous;
	uint32_t workerCount;
	b3EnqueueTaskCallback* enqueueTask;
	b3FinishTaskCallback* finishTask;
	void* userTaskContext;
	void* userData;
	b3CreateDebugShapeCallback* createDebugShape;
	b3DestroyDebugShapeCallback* destroyDebugShape;
	void* userDebugShapeContext;
	b3Capacity capacity;
	int internalValue;
} b3WorldDef;
typedef struct b3Filter
{
	uint64_t categoryBits;
	uint64_t maskBits;
	int groupIndex;
} b3Filter;
typedef struct b3SurfaceMaterial
{
	float friction;
	float restitution;
	float rollingResistance;
	b3Vec3 tangentVelocity;
	uint64_t userMaterialId;
	uint32_t customColor;
	uint32_t padding;
} b3SurfaceMaterial;
typedef enum b3ShapeType
{
	b3_capsuleShape,
	b3_compoundShape,
	b3_heightShape,
	b3_hullShape,
	b3_meshShape,
	b3_sphereShape,
	b3_voxelShape,
	b3_shapeTypeCount
} b3ShapeType;
typedef struct b3ShapeDef
{
	const char* name;
	void* userData;
	b3SurfaceMaterial* materials;
	int materialCount;
	b3SurfaceMaterial baseMaterial;
	float density;
	float explosionScale;
	b3Filter filter;
	bool enableCustomFiltering;
	bool isSensor;
	bool enableSensorEvents;
	bool enableContactEvents;
	bool enableHitEvents;
	bool enablePreSolveEvents;
	bool invokeContactCreation;
	bool updateBodyMass;
	bool enableSpeculativeContact;
	int internalValue;
} b3ShapeDef;
B3_API b3ShapeDef b3DefaultShapeDef( void );
typedef struct b3Profile
{
	float step;
	float pairs;
	float collide;
	float solve;
	float solverSetup;
	float constraints;
	float prepareConstraints;
	float integrateVelocities;
	float warmStart;
	float solveImpulses;
	float integratePositions;
	float relaxImpulses;
	float applyRestitution;
	float storeImpulses;
	float splitIslands;
	float transforms;
	float sensorHits;
	float jointEvents;
	float hitEvents;
	float refit;
	float bullets;
	float sleepIslands;
	float sensors;
} b3Profile;
typedef struct b3VoxelCounters
{
	int voxelVoxelCalls;
	int voxelConvexCalls;
	int queryCalls;
	int chunksVisited;
	int occupiedEntriesScanned;
	int cellsReturned;
	int countFillRescans;
	int obbTests;
	int convexLeafTests;
	int hullSatCalls;
	int hullSatCacheHits;
	int rawContactPoints;
	int surfaceRejects;
	int deepOverlapFallbacks;
	int ccdEncounters;
	int ccdBroadPhaseVisits;
	int ccdConvexTargets;
	int ccdAggregateTargets;
	int ccdCellsVisited;
	int ccdInteriorRejects;
	int ccdCorridorRejects;
	int ccdExactToiCalls;
	int reducerOverflowInsertions;
	int normalClusters;
	int emittedManifolds;
	int emittedPoints;
	int persistedPoints;
	int manifoldReallocations;
	int scalarContacts;
	int singleManifoldContacts;
	int solverClassChanges;
	int patchVisits;
	int patchUniqueKeys;
	int patchDuplicateVisits;
	int patchEligibleVisits;
	int patchEligibleUniqueKeys;
	int patchMaxMultiplicity;
	int patchMaxUniqueKeys;
	int patchMultiplicityCounts[6];
	int patchTopologyPairs[16];
	int patchSatFaceAxes;
	int patchSatEdgeAxes;
	int patchSatSeparations;
	int topologyPrunedPairs;
	int representedLeafPairs;
	int pseudoSatCalls;
	int pseudoSeparatedKeys;
	int selectedPatchKeys;
	int emptySelectedPatchKeys;
	int pseudoWitnessRejects;
	int pseudoDepthRejects;
	int pseudoLateSelections;
	int patchBudgetOverflows;
	int emittedPatchManifolds;
	int workspaceKeyHits;
	int workspaceKeyMisses;
	int exactPatchPersistedPoints;
	int featureRemapRejects;
	int emptyPatchFallbackKeys;
	int patchLeafFallbackTests;
	int patchTableGrowths;
	int patchScratchPeakBytes;
	int adaptiveLeafPairs;
} b3VoxelCounters;
typedef struct b3Counters
{
	int bodyCount;
	int shapeCount;
	int contactCount;
	int jointCount;
	int islandCount;
	int stackUsed;
	int arenaCapacity;
	int staticTreeHeight;
	int treeHeight;
	int satCallCount;
	int satCacheHitCount;
	int byteCount;
	int taskCount;
	int colorCounts[24];
	int manifoldCounts[B3_CONTACT_MANIFOLD_COUNT_BUCKETS];
	b3VoxelCounters voxel;
	int awakeContactCount;
	int recycledContactCount;
	int distanceIterations;
	int pushBackIterations;
	int rootIterations;
} b3Counters;
typedef enum b3JointType
{
	b3_parallelJoint,
	b3_distanceJoint,
	b3_filterJoint,
	b3_motorJoint,
	b3_prismaticJoint,
	b3_revoluteJoint,
	b3_sphericalJoint,
	b3_weldJoint,
	b3_wheelJoint,
} b3JointType;
typedef struct b3JointDef
{
	void* userData;
	b3BodyId bodyIdA;
	b3BodyId bodyIdB;
	b3Transform localFrameA;
	b3Transform localFrameB;
	float forceThreshold;
	float torqueThreshold;
	float constraintHertz;
	float constraintDampingRatio;
	float drawScale;
	bool collideConnected;
	int internalValue;
} b3JointDef;
typedef struct b3DistanceJointDef
{
	b3JointDef base;
	float length;
	bool enableSpring;
	float lowerSpringForce;
	float upperSpringForce;
	float hertz;
	float dampingRatio;
	bool enableLimit;
	float minLength;
	float maxLength;
	bool enableMotor;
	float maxMotorForce;
	float motorSpeed;
} b3DistanceJointDef;
B3_API b3DistanceJointDef b3DefaultDistanceJointDef( void );
typedef struct b3MotorJointDef
{
	b3JointDef base;
	b3Vec3 linearVelocity;
	float maxVelocityForce;
	b3Vec3 angularVelocity;
	float maxVelocityTorque;
	float linearHertz;
	float linearDampingRatio;
	float maxSpringForce;
	float angularHertz;
	float angularDampingRatio;
	float maxSpringTorque;
} b3MotorJointDef;
B3_API b3MotorJointDef b3DefaultMotorJointDef( void );
typedef struct b3FilterJointDef
{
	b3JointDef base;
} b3FilterJointDef;
B3_API b3FilterJointDef b3DefaultFilterJointDef( void );
typedef struct b3ParallelJointDef
{
	b3JointDef base;
	float hertz;
	float dampingRatio;
	float maxTorque;
} b3ParallelJointDef;
B3_API b3ParallelJointDef b3DefaultParallelJointDef( void );