boxddd-sys/src/bindings_pregenerated.rs

/// A capsule is an extruded sphere
pub const b3ShapeType_b3_capsuleShape: b3ShapeType = 0;
/// A baked compound shape composed of spheres, capsules, hulls, and meshes
pub const b3ShapeType_b3_compoundShape: b3ShapeType = 1;
/// A height field useful for terrain
pub const b3ShapeType_b3_heightShape: b3ShapeType = 2;
/// A convex hull
pub const b3ShapeType_b3_hullShape: b3ShapeType = 3;
/// A triangle soup
pub const b3ShapeType_b3_meshShape: b3ShapeType = 4;
/// A sphere with an offset
pub const b3ShapeType_b3_sphereShape: b3ShapeType = 5;
/// The number of shape types
pub const b3ShapeType_b3_shapeTypeCount: b3ShapeType = 6;
/** Shape type
 @ingroup shape*/
pub type b3ShapeType = ::std::os::raw::c_uint;
/** Used to create a shape
 @ingroup shape*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ShapeDef {
    /// Optional shape name for debugging
    pub name: *const ::std::os::raw::c_char,
    /// Use this to store application specific shape data.
    pub userData: *mut ::std::os::raw::c_void,
    /// Surface material used on mesh shapes per triangle. Ignored for convex shapes. Ignored for compound shapes.
    pub materials: *mut b3SurfaceMaterial,
    /// Surface material count.
    pub materialCount: ::std::os::raw::c_int,
    /// The base surface material. Ignored for compound shapes.
    pub baseMaterial: b3SurfaceMaterial,
    /// The density, usually in kg/m^3.
    pub density: f32,
    /// Explosion scale for b3World_Explode. non-dimensional
    pub explosionScale: f32,
    /// Contact filtering data.
    pub filter: b3Filter,
    /// Enable custom filtering. Only one of the two shapes needs to enable custom filtering. See b3WorldDef.
    pub enableCustomFiltering: bool,
    /** A sensor shape generates overlap events but never generates a collision response.
 Sensors do not have continuous collision. Instead, use a ray or shape cast for those scenarios.
 Sensors still contribute to the body mass if they have non-zero density.
 @note Sensor events are disabled by default.
 @see enableSensorEvents*/
    pub isSensor: bool,
    /// Enable sensor events for this shape. This applies to sensors and non-sensors. False by default, even for sensors.
    pub enableSensorEvents: bool,
    /// Enable contact events for this shape. Only applies to kinematic and dynamic bodies. Ignored for sensors. False by default.
    pub enableContactEvents: bool,
    /// Enable hit events for this shape. Only applies to kinematic and dynamic bodies. Ignored for sensors. False by default.
    pub enableHitEvents: bool,
    /** Enable pre-solve contact events for this shape. Only applies to dynamic bodies. These are expensive
	and must be carefully handled due to multithreading. Ignored for sensors.*/
    pub enablePreSolveEvents: bool,
    /** When shapes are created they will scan the environment for collision the next time step. This can significantly slow down
 static body creation when there are many static shapes.
 This is flag is ignored for dynamic and kinematic shapes which always invoke contact creation.*/
    pub invokeContactCreation: bool,
    /** Should the body update the mass properties when this shape is created. Default is true.
 Warning: if this is false, you MUST call b3Body_ApplyMassFromShapes or b3Body_SetMassData before simulating the world.*/
    pub updateBodyMass: bool,
    /** Enable speculative collision. Leave this true unless you care about reducing ghost collision
 more than continuous collision under rotation.
 Experimental: this can only disable speculative contact between hulls and triangles (meshes and height fields).*/
    pub enableSpeculativeContact: bool,
    /// Used internally to detect a valid definition. DO NOT SET.
    pub internalValue: ::std::os::raw::c_int,
}
unsafe extern "C" {
    /** Use this to initialize your shape definition
 @ingroup shape*/
    pub fn b3DefaultShapeDef() -> b3ShapeDef;
}
/**! @cond
 Profiling data. Times are in milliseconds.
 @ingroup world*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Profile {
    pub step: f32,
    pub pairs: f32,
    pub collide: f32,
    pub solve: f32,
    pub solverSetup: f32,
    pub constraints: f32,
    pub prepareConstraints: f32,
    pub integrateVelocities: f32,
    pub warmStart: f32,
    pub solveImpulses: f32,
    pub integratePositions: f32,
    pub relaxImpulses: f32,
    pub applyRestitution: f32,
    pub storeImpulses: f32,
    pub splitIslands: f32,
    pub transforms: f32,
    pub sensorHits: f32,
    pub jointEvents: f32,
    pub hitEvents: f32,
    pub refit: f32,
    pub bullets: f32,
    pub sleepIslands: f32,
    pub sensors: f32,
}
/** Counters that give details of the simulation size.
 @ingroup world*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Counters {
    pub bodyCount: ::std::os::raw::c_int,
    pub shapeCount: ::std::os::raw::c_int,
    pub contactCount: ::std::os::raw::c_int,
    pub jointCount: ::std::os::raw::c_int,
    pub islandCount: ::std::os::raw::c_int,
    pub stackUsed: ::std::os::raw::c_int,
    pub arenaCapacity: ::std::os::raw::c_int,
    pub staticTreeHeight: ::std::os::raw::c_int,
    pub treeHeight: ::std::os::raw::c_int,
    pub satCallCount: ::std::os::raw::c_int,
    pub satCacheHitCount: ::std::os::raw::c_int,
    pub byteCount: ::std::os::raw::c_int,
    pub taskCount: ::std::os::raw::c_int,
    pub colorCounts: [::std::os::raw::c_int; 24usize],
    pub manifoldCounts: [::std::os::raw::c_int; 8usize],
    /** Number of contacts touched by the collide pass
 graph contacts + awake-set non-touching*/
    pub awakeContactCount: ::std::os::raw::c_int,
    /// Number of contacts recycled in the most recent step.
    pub recycledContactCount: ::std::os::raw::c_int,
    /// Maximum number of time of impact iterations
    pub distanceIterations: ::std::os::raw::c_int,
    pub pushBackIterations: ::std::os::raw::c_int,
    pub rootIterations: ::std::os::raw::c_int,
}
pub const b3JointType_b3_parallelJoint: b3JointType = 0;
pub const b3JointType_b3_distanceJoint: b3JointType = 1;
pub const b3JointType_b3_filterJoint: b3JointType = 2;
pub const b3JointType_b3_motorJoint: b3JointType = 3;
pub const b3JointType_b3_prismaticJoint: b3JointType = 4;
pub const b3JointType_b3_revoluteJoint: b3JointType = 5;
pub const b3JointType_b3_sphericalJoint: b3JointType = 6;
pub const b3JointType_b3_weldJoint: b3JointType = 7;
pub const b3JointType_b3_wheelJoint: b3JointType = 8;
/** Joint type enumeration. This is useful because all joint types use b3JointId and sometimes you
 want to get the type of a joint.
 @ingroup joint*/
pub type b3JointType = ::std::os::raw::c_uint;
/** Base joint definition used by all joint types. The local frames are measured from the
 body's origin rather than the center of mass because:
 1. You might not know where the center of mass will be.
 2. If you add/remove shapes from a body and recompute the mass, the joints will be broken.
 @ingroup joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3JointDef {
    /// User data pointer
    pub userData: *mut ::std::os::raw::c_void,
    /// The first attached body
    pub bodyIdA: b3BodyId,
    /// The second attached body
    pub bodyIdB: b3BodyId,
    /// The first local joint frame
    pub localFrameA: b3Transform,
    /// The second local joint frame
    pub localFrameB: b3Transform,
    /// Force threshold for joint events
    pub forceThreshold: f32,
    /// Torque threshold for joint events
    pub torqueThreshold: f32,
    /// Constraint hertz (advanced feature)
    pub constraintHertz: f32,
    /// Constraint damping ratio (advanced feature)
    pub constraintDampingRatio: f32,
    /// Debug draw scale
    pub drawScale: f32,
    /// Set this flag to true if the attached bodies should collide
    pub collideConnected: bool,
    /// Used internally to detect a valid definition. DO NOT SET.
    pub internalValue: ::std::os::raw::c_int,
}
/** Distance joint definition.
 Connects a point on body A with a point on body B by a segment.
 Useful for ropes and springs.
 @ingroup distance_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3DistanceJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// The rest length of this joint. Clamped to a stable minimum value.
    pub length: f32,
    /** Enable the distance constraint to behave like a spring. If false
 then the distance joint will be rigid, overriding the limit and motor.*/
    pub enableSpring: bool,
    /// The lower spring force controls how much tension it can sustain
    pub lowerSpringForce: f32,
    /// The upper spring force controls how much compression it can sustain
    pub upperSpringForce: f32,
    /// The spring linear stiffness Hertz, cycles per second
    pub hertz: f32,
    /// The spring linear damping ratio, non-dimensional
    pub dampingRatio: f32,
    /// Enable/disable the joint limit
    pub enableLimit: bool,
    /// Minimum length. Clamped to a stable minimum value.
    pub minLength: f32,
    /// Maximum length. Must be greater than or equal to the minimum length.
    pub maxLength: f32,
    /// Enable/disable the joint motor
    pub enableMotor: bool,
    /// The maximum motor force, usually in newtons
    pub maxMotorForce: f32,
    /// The desired motor speed, usually in meters per second
    pub motorSpeed: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup distance_joint*/
    pub fn b3DefaultDistanceJointDef() -> b3DistanceJointDef;
}
/** A motor joint is used to control the relative position and velocity between two bodies.
 @ingroup motor_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MotorJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// The desired linear velocity
    pub linearVelocity: b3Vec3,
    /// The maximum motor force in newtons
    pub maxVelocityForce: f32,
    /// The desired angular velocity
    pub angularVelocity: b3Vec3,
    /// The maximum motor torque in newton-meters
    pub maxVelocityTorque: f32,
    /// Linear spring hertz for position control
    pub linearHertz: f32,
    /// Linear spring damping ratio
    pub linearDampingRatio: f32,
    /// Maximum spring force in newtons
    pub maxSpringForce: f32,
    /// Angular spring hertz for position control
    pub angularHertz: f32,
    /// Angular spring damping ratio
    pub angularDampingRatio: f32,
    /// Maximum spring torque in newton-meters
    pub maxSpringTorque: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup motor_joint*/
    pub fn b3DefaultMotorJointDef() -> b3MotorJointDef;
}
/** A filter joint is used to disable collision between two specific bodies.
 @ingroup filter_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3FilterJointDef {
    /// Base joint definition
    pub base: b3JointDef,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup filter_joint*/
    pub fn b3DefaultFilterJointDef() -> b3FilterJointDef;
}
/** Parallel joint definition. Constrains the angle between axis z in body A and axis z in body B
 using a spring. Useful to keep a body upright.
 @ingroup parallel_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ParallelJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// The spring stiffness Hertz, cycles per second
    pub hertz: f32,
    /// The spring damping ratio, non-dimensional
    pub dampingRatio: f32,
    /// The maximum spring torque, typically in newton-meters.
    pub maxTorque: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup parallel_joint*/
    pub fn b3DefaultParallelJointDef() -> b3ParallelJointDef;
}
